# ChronosVector

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  perf.yml
bench/: CMakeLists.txt  bench_compare.cpp  bench_engine.cpp  bench_kernels.cpp  bench_ring.cpp
bench/baselines/: README.md  linux-arm64.json  macos-arm64.json
docker/: Dockerfile.linux  README.md  build_and_test.sh  capture_baseline.sh  verify_linux.sh
docs/: BUILDING.md  INT8.md  USE_CASES.md
examples/: CMakeLists.txt  anomaly_stream.cpp  chronosv_cli.cpp
include/chronosv/: chronos_vector.h  chronos_vector.hpp  metrics_sink.h  ring_buffer.h  storage_backend.h  types.h
soak/: CMakeLists.txt  README.md  soak_test.cpp
src/: block_codec.cpp  block_codec.h  engine.cpp  kernels.cpp  kernels.h  storage_rocksdb.cpp  storage_rocksdb.h
tests/: CMakeLists.txt  test_block_codec.cpp  test_engine.cpp  test_kernels.cpp  test_kernels_int8.cpp  test_phase2_integration.cpp  test_ring_buffer.cpp  test_storage_backend.cpp  test_storage_rocksdb.cpp
tests/int8_recall/: CMakeLists.txt  README.md  prepare_bert.py  prepare_sift1m.sh  test_int8_recall.cpp
